Fixed Spacing in Boxes

--- a/client/src/FirstPage.css
+++ b/client/src/FirstPage.css
@@ -163,3 +163,21 @@ p{
     transition: 0.5;
 
 }
+
+h3{
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0;
+
+}
+
+.course-col:hover{
+    box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+}
+
+@media(max-dith: 700px)
+{
+  .row{
+    flex-direction: column;
+  }
+}
